--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "build:lcu": "ng build lcu --prod --single-bundle && npm run pack",
     "demo": "npm run build:common && npm run build:lcu && npm run start",
     "deploy": "npm version patch && npm run deploy:all",
-    "deploy:all": "npm run deploy:lcu && npm run deploy:common && npm run deploy:demo",
+    "deploy:all": "npm run deploy:common && npm run deploy:lcu && npm run deploy:demo",
     "deploy:common": "npm version patch --prefix projects/common && ng build common && npm publish ./dist/common --access public",
     "deploy:demo": "ng build demo --prod && npm publish ./dist/demo --access public",
     "deploy:lcu": "ng build lcu --prod && npm publish ./dist/lcu --access public",
