--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "deploy:all": "npm run deploy:common && npm run deploy:lcu && npm run deploy:demo",
     "deploy:common": "npm version patch --prefix projects/common && ng build common && npm publish ./dist/common --access public",
     "deploy:demo": "npm version patch --prefix projects/demo && ng build demo --prod && npm publish ./dist/demo --access public",
-    "deploy:lcu": "npm version patch --prefix projects/lcu && ng build lcu --prod && npm publish ./dist/lcu --access public",
+    "deploy:lcu": "npm version patch --prefix projects/lcu && npm run build:lcu && npm publish ./dist/lcu --access public",
     "ng": "ng",
     "pack": "npm run pack:lcu",
     "pack:join": "concat-glob-cli -f \"dist/wc/lcu/lcu.*.js\" -o dist/wc/lcu-state.lcu.js",
