--- a/package.json
+++ b/package.json
@@ -13,10 +13,10 @@
     "deploy:lcu": "npm version patch --prefix projects/lcu && npm run build:lcu && npm publish ./dist/lcu --access public",
     "ng": "ng",
     "pack": "npm run pack:lcu",
-    "pack:join": "concat-glob-cli -f \"dist/wc/lcu/lcu.*.js\" -o dist/wc/lcu-state.lcu.js",
+    "pack:join": "concat-glob-cli -f \"dist/lcu/wc/lcu/lcu.*.js\" -o dist/lcu/wc/lcu-state.lcu.js",
     "pack:lcu": "mkdirp dist/wc/lcu && npm run pack:main && npm run pack:pollyfills && npm run pack:join",
-    "pack:main": "concat-glob-cli -f \"dist/lcu/main.*.js\" -o dist/wc/lcu/lcu.1.js",
-    "pack:pollyfills": "concat-glob-cli -f \"dist/lcu/scripts.*.js\" -o dist/wc/lcu/lcu.0.js",
+    "pack:main": "concat-glob-cli -f \"dist/lcu/main.*.js\" -o dist/lcu/wc/lcu/lcu.1.js",
+    "pack:pollyfills": "concat-glob-cli -f \"dist/lcu/scripts.*.js\" -o dist/lcu/wc/lcu/lcu.0.js",
     "start": "ng serve demo --port=4224",
     "build": "npm run build:common && npm run build:lcu",
     "test": "ng test",
