--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
     "ng": "ng",
     "pack": "npm run pack:lcu",
     "pack:join": "concat-glob-cli -f \"dist/lcu/wc/lcu/lcu.*.js\" -o dist/lcu/wc/lcu-state.lcu.js",
-    "pack:lcu": "mkdirp dist/lcu/wc/lcu && npm run pack:main && npm run pack:pollyfills && npm run pack:join",
-    "pack:main": "concat-glob-cli -f \"dist/lcu/main.*.js\" -o dist/lcu/wc/lcu/lcu.1.js",
-    "pack:pollyfills": "concat-glob-cli -f \"dist/lcu/scripts.*.js\" -o dist/lcu/wc/lcu/lcu.0.js",
+    "pack:lcu": "rimraf dist/lcu/wc && mkdirp dist/lcu/wc && npm run pack:main && npm run pack:pollyfills && npm run pack:join",
+    "pack:main": "concat-glob-cli -f \"dist/lcu/main.*.js\" -o dist/lcu/wc/lcu.startup.js",
+    "pack:pollyfills": "concat-glob-cli -f \"dist/lcu/scripts.*.js\" -o dist/lcu/wc/lcu.pollyfills.js",
     "start": "ng serve demo --port=4224",
     "build": "npm run build:common && npm run build:lcu",
     "test": "ng test",
@@ -72,6 +72,7 @@
     "mkdirp": "^0.5.1",
     "ng-packagr": "^4.2.0",
     "protractor": "~5.4.0",
+    "rimraf": "^2.6.3",
     "ts-node": "~7.0.0",
     "tsickle": ">=0.34.0",
     "tslib": "^1.9.0",
