--- a/package.json
+++ b/package.json
@@ -3,13 +3,14 @@
   "version": "0.0.26",
   "scripts": {
     "build:common": "ng build common",
+    "build:demo": "ng build demo --prod",
     "build:lcu": "ng build lcu --prod --single-bundle && npm run pack",
     "demo": "npm run build:common && npm run start",
     "demo:lcu": "npm run build:common && npm run build:lcu && npm run start",
     "deploy": "npm version patch && npm run deploy:all",
     "deploy:all": "npm run deploy:common && npm run deploy:lcu && npm run deploy:demo",
-    "deploy:common": "npm version patch --prefix projects/common && ng build common && npm publish ./dist/common --access public",
-    "deploy:demo": "npm version patch --prefix projects/demo && ng build demo --prod && npm publish ./dist/demo --access public",
+    "deploy:common": "npm version patch --prefix projects/common && npm run build:common && npm publish ./dist/common --access public",
+    "deploy:demo": "npm version patch --prefix projects/demo && npm run build:demo && npm publish ./dist/demo --access public",
     "deploy:lcu": "npm version patch --prefix projects/lcu && npm run build:lcu && npm publish ./dist/lcu --access public",
     "ng": "ng",
     "pack": "npm run pack:lcu",
