Added basic config to lcu.json, for describing LCU contents

--- a/angular.json
+++ b/angular.json
@@ -28,7 +28,8 @@
                 "glob": "package.json",
                 "input": "./projects/lcu/",
                 "output": "/"
-              }
+              },
+              "lcu.json"
             ],
             "styles": [
               "projects/lcu/src/styles.scss"
