--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
     "@aspnet/signalr": "^1.1.2",
-    "@lcu-ide/common": "^0.1.30-integration",
+    "@lcu-ide/common": "^0.10.572",
     "@lowcodeunit-devkit/ng-lcu": "^0.1.2-integration",
     "@webcomponents/custom-elements": "^1.2.1",
     "@webcomponents/webcomponentsjs": "^2.2.7",
