--- a/package.json
+++ b/package.json
@@ -40,18 +40,18 @@
     "@angular/platform-browser-dynamic": "~8.1.2",
     "@angular/router": "~8.1.2",
     "@aspnet/signalr": "^1.1.4",
-    "@lcu-ide/common": "^0.19.2",
-    "@lowcodeunit-devkit/ng-lcu": "^0.1.2-integration",
+    "@lcu-ide/common": "^0.24.33",
+    "@lowcodeunit-devkit/ng-lcu": "^0.83.428",
     "@webcomponents/custom-elements": "^1.2.1",
     "@webcomponents/webcomponentsjs": "^2.2.7",
     "copy": "^0.3.2",
     "core-js": "^2.5.4",
     "dot-object": "^1.7.1",
     "hammerjs": "^2.0.8",
+    "ngx-build-plus": "^8.1.3",
     "rxjs": "~6.4.0",
     "tslib": "^1.9.0",
-    "zone.js": "~0.8.29",
-    "ngx-build-plus": "^8.1.3"
+    "zone.js": "~0.8.29"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^0.801.2",
@@ -59,7 +59,7 @@
     "@angular/cli": "^8.1.2",
     "@angular/compiler-cli": "~8.1.2",
     "@angular/language-service": "~8.1.2",
-    "@lcu/cli": "^0.1.1-integration",
+    "@lcu/cli": "^0.24.12",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
@@ -77,10 +77,10 @@
     "ng-packagr": "^5.3.0",
     "node-sass": "^4.12.0",
     "protractor": "~5.4.0",
+    "rimraf": "^2.6.3",
     "ts-node": "~7.0.0",
     "tsickle": ">=0.34.0",
     "tslint": "~5.11.0",
-    "typescript": "3.4.5",
-    "rimraf": "^2.6.3"
+    "typescript": "3.4.5"
   }
 }
