--- a/package.json
+++ b/package.json
@@ -40,8 +40,8 @@
     "@angular/platform-browser-dynamic": "~8.1.2",
     "@angular/router": "~8.1.2",
     "@aspnet/signalr": "^1.1.4",
-    "@lcu-ide/common": "^0.24.33",
-    "@lowcodeunit-devkit/ng-lcu": "^0.83.428",
+    "@lcu/common": "^0.78.361",
+    "@lowcodeunit-devkit/ng-lcu": "^0.85.436",
     "@webcomponents/custom-elements": "^1.2.1",
     "@webcomponents/webcomponentsjs": "^2.2.7",
     "copy": "^0.3.2",
